--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,12 +14,12 @@ if("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
 	add_definitions("-D_GNU_SOURCE")
 endif("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
 
-add_executable(check-aliases main.c aliases_lexer.c aliases_parser.c)
+add_executable(bin/check-aliases src/main.c src/aliases_lexer.c src/aliases_parser.c)
 
-add_custom_command(COMMAND lex ARGS -oaliases_lexer.c aliases_lexer.l DEPENDS aliases_lexer.l OUTPUT aliases_lexer.c aliases_parser.h)
-add_custom_command(COMMAND yacc ARGS -d -v -o aliases_parser.c aliases_parser.y DEPENDS aliases_parser.y aliases_parser.h OUTPUT aliases_parser.c)
+add_custom_command(COMMAND lex ARGS -osrc/aliases_lexer.c src/aliases_lexer.l DEPENDS src/aliases_lexer.l OUTPUT src/aliases_lexer.c src/aliases_parser.h)
+add_custom_command(COMMAND yacc ARGS -d -v -o src/aliases_parser.c src/aliases_parser.y DEPENDS src/aliases_parser.y src/aliases_parser.h OUTPUT src/aliases_parser.c)
 
 add_custom_target(style DEPENDS style_fix_space style_astyle)
-add_custom_target(style_fix_space COMMAND find . -name '*.[ch]' -exec perl -pi -e 's/[ \\t]+$$//' '{}' '\\;' COMMENT "Fixing invalid space sequences")
-add_custom_target(style_astyle COMMAND find . -name '*.[ch]' -exec astyle --style=linux --indent=force-tab-x --lineend=linux {} '\\;' COMMENT "Checking source code style" DEPENDS style_fix_space)
+add_custom_target(style_fix_space COMMAND find src -name '*.[ch]' -exec perl -pi -e 's/[ \\t]+$$//' '{}' '\\;' COMMENT "Fixing invalid space sequences")
+add_custom_target(style_astyle COMMAND find src -name '*.[ch]' -exec astyle --style=linux --indent=force-tab-x --lineend=linux {} '\\;' COMMENT "Checking source code style" DEPENDS style_fix_space)
 
